# aiogram3_template_fastAPI

./: .env  .gitignore  app.py  pyproject.toml  requirements.txt
src/: config.py
src/filters/: is_private.py
src/handlers/: __init__.py  start.py
src/middlewares/: config.py
src/tgbot/handlers/: start.py
